--- a/css/layout.css
+++ b/css/layout.css
@@ -64,8 +64,8 @@ header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg)
 #logo.txt a {position:relative; padding:32px 5px; font-size:18px; box-shadow:inset 0 0 0 2px #fff; font-family:"notoSansB"; box-sizing:border-box; color:#fff; text-align:center; transition: box-shadow 0.3s;}
 #logo.txt a:before,
 #logo.txt a:after {position: absolute; width:100%; height:100%; top:0; left:0; box-sizing:inherit; transform-origin: center; content: '';}
-#logo.txt a:before {border-top: 2px solid gold; border-bottom: 2px solid gold; transform: scale3d(0,1,1);}
-#logo.txt a:after {border-left: 2px solid gold; border-right: 2px solid gold; transform: scale3d(1,0,1);}
+#logo.txt a:before {border-top: 2px solid gold; border-bottom: 2px solid #efe70d; transform: scale3d(0,1,1);}
+#logo.txt a:after {border-left: 2px solid gold; border-right: 2px solid #efe70d; transform: scale3d(1,0,1);}
 
 #logo.txt a:hover:before,
 #logo.txt a:hover:after {transform: scale3d(1,1,1); transition: transform 0.5s;}
@@ -75,13 +75,13 @@ header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg)
 #header_area.on #logo.txt a:after {display:none;}
 
 #logo a img {width:100%;}
-#logo span {color:#b6ff00;}
+#logo span {color:#efe70d;}
 #gnb {position:absolute; top:50px; right:0;}
 #gnb:after {display:block; clear:both; content:"";}
 #gnb > li > a {display:block; font-size:30px; color:#fff; text-align:center; line-height:34px}
 #gnb > li > a:hover,
 #gnb > li > a:focus,
-#gnb > li.on > a {color:#b6ff00;}
+#gnb > li.on > a {color:#efe70d;}
 
 /*******************************
     02. SNB LAYOUT CSS
@@ -134,7 +134,7 @@ header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg)
 #content .description > li {position:relative; font-size:16px; padding-left:9px; line-height:28px; color:#222;}
 #content .description > li em {font-family:"notoSansB";}
 #content .description > li:before {display:inline-block; position:absolute; content:""; width:3px; top:14px; left:0; border-bottom:3px solid #222; border-radius:50%;}
-#content .description > li > ul {margin-left:20px;}
+#content .description > li > ul {margin-left:12px;}
 #content .description > li > ul > li {position:relative; padding-left:10px;}
 #content .description > li > ul > li:before {display:inline-block; position:absolute; content:""; width:4px; border-bottom:1px solid #222; top:14px; left:0;}
 
