--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
 #wrap {overflow:inherit; height:100%;}
 #wrap.on {overflow:hidden;}
 #wrap.on #header_area {position:relative;}
-#wrap.on.main .port_list_wrap {padding-top:60px;}
+#wrap.on.main .port__list--wrap {padding-top:60px;}
 
 #header_area {position: fixed; height: 130px; background: #222; width: 100%; top: 0; left: 0; right: 0; z-index: 50;}
 
@@ -56,24 +56,24 @@
 #header_area.on .m_menu {top:65px;}
 #header_area.on #gnb {top:11px;}
 #header_area.on #gnb > li > a {font-size:20px; line-height:22px; font-weight:bold;}
-.main_visual.on {margin-top:65px;}
+.main__visual.on {margin-top:65px;}
 
 /* Work Portfolio */
-.port_list_wrap {background:#fff;}
-.port_list {position:relative; padding:30px 10px 0; background:#fff; overflow:hidden;}
-.port_list li {position:relative; float:left; width:23%; margin:0 1% 35px; overflow:hidden; opacity:0; border-radius:5px;}
-.port_list.on li {animation:fadeIn .65s forwards ease-in-out; -webkit-animation:fadeIn .65s forwards ease-in-out;}
-.port_list li a {display:block; height:100%; cursor:pointer;}
-/*.port_list li a:focus img ,
-.port_list li a:hover img {animation:tada .85s forwards ease-in-out; -webkit-animation:jackInTheBox .85s forwards ease-in-out;}*/
-.port_list li a:focus img ,
-.port_list li a:hover img {transform:scale(1.1); -webkit-transform:scale(1.1);  transition: transform .7s; -webkit-transition: transform .7s;}
+.port__list--wrap {background:#fff;}
+.port__list {position:relative; padding:30px 10px 0; background:#fff; overflow:hidden;}
+.port__list li {position:relative; float:left; width:23%; margin:0 1% 35px; overflow:hidden; opacity:0; border-radius:5px;}
+.port__list.on li {animation:fadeIn .65s forwards ease-in-out; -webkit-animation:fadeIn .65s forwards ease-in-out;}
+.port__list li a {display:block; height:100%; cursor:pointer;}
+/*.port__list li a:focus img ,
+.port__list li a:hover img {animation:tada .85s forwards ease-in-out; -webkit-animation:jackInTheBox .85s forwards ease-in-out;}*/
+.port__list li a:focus img ,
+.port__list li a:hover img {transform:scale(1.1); -webkit-transform:scale(1.1);  transition: transform .7s; -webkit-transition: transform .7s;}
 
-.port_list li a img {width:100%; height:auto;}
-.port_list li .over .tit {margin-top:60px; font-size:18px; line-height:26px; text-align:center;}
-.port_list li .over .tit span.date {display:block; font-size:16px; margin-top:10px; letter-spacing:0;}
+.port__list li a img {width:100%; height:auto;}
+.port__list li .over .tit {margin-top:60px; font-size:18px; line-height:26px; text-align:center;}
+.port__list li .over .tit span.date {display:block; font-size:16px; margin-top:10px; letter-spacing:0;}
 
-.port_list li .over .more {display:block; position:absolute; left:50%; width:108px; height:40px; margin-left:-54px; bottom:-300%; background:url(../img/btn_more2.png) no-repeat;}
+.port__list li .over .more {display:block; position:absolute; left:50%; width:108px; height:40px; margin-left:-54px; bottom:-300%; background:url(../img/btn_more2.png) no-repeat;}
 .tmb_tit {position: absolute; left: 0; top: 50%; right: 0; bottom: 0; margin-top: -1em; font-size: 50px; text-align: center; color: #fff;}
 
 .ico_wrap {position:absolute; top:5px; right:5px;}
@@ -82,15 +82,15 @@ li.even span.ico {color:#000;}
 span.ico ~ .ico {margin-left:3px;}
 span.ico.new {color:#b6ff00;}
 
-.main_visual {position:relative; margin-top:130px; height:810px; background:url(../img/main/bg_main_visual.jpg) no-repeat 50% 50%; background-size:cover; background-attachment:fixed;}
-.main_visual .title_wrap {position:absolute; left:0; right:0; top:0; bottom:0; background:rgba(0, 0, 0, 0.4); z-index:5; padding:40px;}
-.main_visual .tit {font-size:72px; line-height:84px; color:#fff; font-family:"notoSansB";
+.main__visual {position:relative; margin-top:130px; height:810px; background:url(../img/main/bg_main_visual.jpg) no-repeat 50% 50%; background-size:cover; background-attachment:fixed;}
+.main__visual .title_wrap {position:absolute; left:0; right:0; top:0; bottom:0; background:rgba(0, 0, 0, 0.4); z-index:5; padding:40px;}
+.main__visual .tit {font-size:72px; line-height:84px; color:#fff; font-family:"notoSansB";
     animation:slideInDown .85s forwards ease-in-out; -webkit-animation:slideInDown .85s forwards ease-in-out;}
-.main_visual .tit span {text-stroke: 1px #fff; -webkit-text-stroke: 1px rgba(255, 255, 255, 0.774); color:transparent; background-clip: text; -webkit-background-clip: text;
+.main__visual .tit span {text-stroke: 1px #fff; -webkit-text-stroke: 1px rgba(255, 255, 255, 0.774); color:transparent; background-clip: text; -webkit-background-clip: text;
     -moz-background-clip: text;}
-.main_visual .sub_tit {margin-top:40px; font-size:18px; line-height:24px; color:#fff; word-break:keep-all; animation:fadeInLeft 1.2s ease-in-out; -webkit-animation:fadeInLeft 1.2s ease-in-out;}
+.main__visual .sub_tit {margin-top:40px; font-size:18px; line-height:24px; color:#fff; word-break:keep-all; animation:fadeInLeft 1.2s ease-in-out; -webkit-animation:fadeInLeft 1.2s ease-in-out;}
 
-.main_visual img {display:none;}
+.main__visual img {display:none;}
 .container {background:#fff; word-break:keep-all;}
 
 /* Work Skill */
@@ -122,34 +122,47 @@ span.ico.new {color:#b6ff00;}
 .skill_list li:nth-of-type(12) .front::before {background-image:url(../img/main/ico_skill_list12.png);}
 
 /* Work info */
-.info_wrap {max-width:1500px; padding:20px 10px; margin:0 20px;}
-.info_wrap dl + dl,
-.info_wrap > div + div {margin-top:25px;}
-.info_wrap dt {font-weight:bold; font-size:18px; margin-bottom:7px;}
-.info_wrap  ul li {margin-top:5px; font-size:15px; line-height:20px; padding-left:10px; background:url(../img/ico_list_square.gif) no-repeat 2px 10px;}
-.info_wrap  ul li:first-of-type {margin-top:0;}
-.info_wrap dl {transform: translate3d(-200%, 0, 0);}
-.work_experience .info_wrap.on dl:nth-of-type(1) {animation:slideInLeft .6s forwards ease-in-out; -webkit-animation:slideInLeft .6s forwards ease-in-out;}
-.work_experience .info_wrap.on dl:nth-of-type(2) {animation:slideInLeft .9s forwards ease-in-out; -webkit-animation:slideInLeft .9s forwards ease-in-out;}
-.work_experience .info_wrap.on dl:nth-of-type(3) {animation:slideInLeft 1.2s forwards ease-in-out; -webkit-animation:slideInLeft 1.2s forwards ease-in-out;}
-.work_experience .info_wrap.on dl:nth-of-type(4) {animation:slideInLeft 1.5s forwards ease-in-out; -webkit-animation:slideInLeft 1.5s forwards ease-in-out;}
-.work_experience .info_wrap.on dl:nth-of-type(5) {animation:slideInLeft 1.8s forwards ease-in-out; -webkit-animation:slideInLeft 1.8s forwards ease-in-out;}
+.step--list__guide > ul {position:relative;}
+.step--list__guide > ul:before {position: absolute; height: calc(100% - 95px); content: ""; border-left: 1px dashed #172336; top: 9px; left: -1px; bottom: 38px;}
+.info__about .step--list__guide > ul:before {height: calc(100% - 115px);}
+.step--list__guide > ul > li {position:relative; margin-top:30px; padding-left:20px; font-size:20px; word-break:keep-all;}
+.step--list__guide > ul > li .desc-img {margin-top:20px;}
+.step--list__guide > ul > li .desc-img img {width:400px; height:auto;}
+.step--list__guide > ul > li:before,
+.step--list__guide > ul > li:after {display:inline-block; content:""; position:absolute; border-radius:50%;}
+.step--list__guide > ul > li:before {z-index:5; top:7px; background:#172336; width:12px; height:12px; left:-7px;}
+.step--list__guide > ul > li:after {z-index:10; top:10px; background:#fff; width:6px; height:6px; left:-4px;}
+.step--list__guide > ul > li:first-of-type {margin-top:0;}
 
-.info_about {padding-bottom:40px;}
-.info_about .info_wrap.on > div:nth-of-type(1) dl {animation:slideInLeft .6s forwards ease-in-out; -webkit-animation:slideInLeft .6s forwards ease-in-out;}
-.info_about .info_wrap.on > div:nth-of-type(2) dl:nth-of-type(1) {animation:slideInLeft .9s forwards ease-in-out; -webkit-animation:slideInLeft .9s forwards ease-in-out;}
-.info_about .info_wrap.on > div:nth-of-type(2) dl:nth-of-type(2) {animation:slideInLeft 1.2s forwards ease-in-out; -webkit-animation:slideInLeft 1.2s forwards ease-in-out;}
-.info_about .info_wrap.on > div:nth-of-type(2) dl:nth-of-type(3) {animation:slideInLeft 1.5s forwards ease-in-out; -webkit-animation:slideInLeft 1.5s forwards ease-in-out;}
-.info_about .info_wrap.on > div:nth-of-type(2) dl:nth-of-type(4) {animation:slideInLeft 1.8s forwards ease-in-out; -webkit-animation:slideInLeft 1.8s forwards ease-in-out;}
+.habit_saving .step--list__guide ul {margin-top:60px;}
+.info__wrap {max-width:1500px; padding:20px 10px; margin:0 20px;}
+.info__wrap dl + dl,
+.info__wrap > div + div {margin-top:25px;}
+.info__wrap dt {font-weight:bold; font-size:18px; margin-bottom:7px;}
+.info__wrap dl ul li {margin-top:5px; font-size:15px; line-height:20px; padding-left:10px; background:url(../img/ico_list_square.gif) no-repeat 2px 10px;}
+.info__wrap dl ul li:first-of-type {margin-top:0;}
+.info__wrap dl {transform: translate3d(-200%, 0, 0);}
+.work_experience .info__wrap.on li:nth-of-type(1) dl {animation:slideInLeft .6s forwards ease-in-out; -webkit-animation:slideInLeft .6s forwards ease-in-out;}
+.work_experience .info__wrap.on li:nth-of-type(2) dl {animation:slideInLeft .9s forwards ease-in-out; -webkit-animation:slideInLeft .9s forwards ease-in-out;}
+.work_experience .info__wrap.on li:nth-of-type(3) dl {animation:slideInLeft 1.2s forwards ease-in-out; -webkit-animation:slideInLeft 1.2s forwards ease-in-out;}
+.work_experience .info__wrap.on li:nth-of-type(4) dl {animation:slideInLeft 1.5s forwards ease-in-out; -webkit-animation:slideInLeft 1.5s forwards ease-in-out;}
+.work_experience .info__wrap.on li:nth-of-type(5) dl {animation:slideInLeft 1.8s forwards ease-in-out; -webkit-animation:slideInLeft 1.8s forwards ease-in-out;}
+
+.info__about {padding-bottom:40px;}
+.info__about .info__wrap.on li:nth-of-type(1) dl {animation:slideInLeft .6s forwards ease-in-out; -webkit-animation:slideInLeft .6s forwards ease-in-out;}
+.info__about .info__wrap.on li:nth-of-type(2) dl {animation:slideInLeft .9s forwards ease-in-out; -webkit-animation:slideInLeft .9s forwards ease-in-out;}
+.info__about .info__wrap.on li:nth-of-type(3) dl {animation:slideInLeft 1.2s forwards ease-in-out; -webkit-animation:slideInLeft 1.2s forwards ease-in-out;}
+.info__about .info__wrap.on li:nth-of-type(4) dl {animation:slideInLeft 1.5s forwards ease-in-out; -webkit-animation:slideInLeft 1.5s forwards ease-in-out;}
+.info__about .info__wrap.on li:nth-of-type(5) dl {animation:slideInLeft 1.8s forwards ease-in-out; -webkit-animation:slideInLeft 1.8s forwards ease-in-out;}
 
 
 .progressbar {position:fixed; width:0; height:5px; left:0; top:0; background:#ffd700; transition: width 0.3s ease; -webkit-transition: width 0.3s ease; z-index:10;}
 
 
 /* movement_wrap */
-.movement_wrap {position:absolute; left:50%; bottom:45px; z-index:10;}
-.movement_wrap div {position:relative; width:36px; height:54px; border-radius: 20px; border:2px solid #fff; }
-.movement_wrap div em {display:inline-block; width:4px; height:4px; background:#fff; text-indent:-9999px; border-radius:2px; position:absolute; top:20%; left:45%; animation-name:mainMouse; animation-iteration-count: infinite; animation-timing-function: ease-in-out; animation-fill-mode:forwards; animation-duration: 2s;}
+.movement__wrap {position:absolute; left:50%; bottom:45px; z-index:10;}
+.movement__wrap div {position:relative; width:36px; height:54px; border-radius: 20px; border:2px solid #fff; }
+.movement__wrap div em {display:inline-block; width:4px; height:4px; background:#fff; text-indent:-9999px; border-radius:2px; position:absolute; top:20%; left:45%; animation-name:mainMouse; animation-iteration-count: infinite; animation-timing-function: ease-in-out; animation-fill-mode:forwards; animation-duration: 2s;}
 @keyframes mainMouse {
     0%{top:20%;}
     100%{top:80%;}
@@ -159,40 +172,40 @@ span.ico.new {color:#b6ff00;}
 ********************************/
 /* MIN-WIDTH */
 @media only screen and (min-width:480px){
-    .port_list li {width:100%;}
+    .port__list li {width:100%;}
 }
 
 @media only screen and (min-width:639px){
-    .port_list li {width:50%;}
+    .port__list li {width:50%;}
 }
 
 @media only screen and (min-width:1023px){
-    .port_list li {width:23%; margin:0 1% 35px}
+    .port__list li {width:23%; margin:0 1% 35px}
 }
 
 @media only screen and (min-width:1500px){
-    .port_list li {width:18%; margin:0 1% 35px}
+    .port__list li {width:18%; margin:0 1% 35px}
 }
 
 
 /* MAX-WIDTH */
 @media screen and (max-width:1240px)  {
-	.port_list li {width:30%; margin:0 1.66% 30px;}
-	.port_list li .over .tit span {font-size:22px; margin-top:0;}
+	.port__list li {width:30%; margin:0 1.66% 30px;}
+	.port__list li .over .tit span {font-size:22px; margin-top:0;}
 }
 
 @media only screen and (max-width:960px) {
     .skill_list li {width:45%; margin:0 2% 20px 2%;}
-    .main_visual {height:inherit;}
-    .main_visual img {display:block; width:100%; height:auto;}
+    .main__visual {height:inherit;}
+    .main__visual img {display:block; width:100%; height:auto;}
 }
 
 @media screen and (max-width:850px) {
-    .info_wrap  ul li br {display:none;}
-    .movement_wrap,
-    .main_visual .sub_tit {display:none;}
-	.port_list li {width:46%; margin:2% 2% 20px 2%;}
-	.port_list {padding: 13px 10px 10px;}
+    .info__wrap  ul li br {display:none;}
+    .movement__wrap,
+    .main__visual .sub_tit {display:none;}
+	.port__list li {width:46%; margin:2% 2% 20px 2%;}
+	.port__list {padding: 13px 10px 10px;}
 }
 
 @media screen and (max-width:420px) {
@@ -201,19 +214,19 @@ span.ico.new {color:#b6ff00;}
 }
 
 @media screen and (max-width:560px) {
-    .main_visual .title_wrap {padding:20px;}
-    .main_visual .tit {font-size:42px; line-height:48px;}
-    .main_visual .sub_tit {display:none;}
+    .main__visual .title_wrap {padding:20px;}
+    .main__visual .tit {font-size:42px; line-height:48px;}
+    .main__visual .sub_tit {display:none;}
 
-	.port_list li {width:96%; margin:2%;}
-	.port_list li .over .tit {font-size:16px;}
-	.port_list li .over .tit span {margin-top:10px; font-size:18px;}
+	.port__list li {width:96%; margin:2%;}
+	.port__list li .over .tit {font-size:16px;}
+	.port__list li .over .tit span {margin-top:10px; font-size:18px;}
     .skill_list li {width:100%; margin:0 0 20px 0;}
     .over {display:block;}
 }
 
 @media only screen and (max-width:380px) {
-    .port_list li {height:auto;}
+    .port__list li {height:auto;}
 }
 
 @media only screen and (max-width:360px) {
