--- a/css/layout.css
+++ b/css/layout.css
@@ -156,15 +156,15 @@ header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg)
 /*******************************
     04. FOOTER LAYOUT CSS
 ********************************/
-footer {height:130px; background:#222; color:#999; border-top:1px solid #333;}
+footer {height:130px; background:#222; color:#fff; border-top:1px solid #333;}
 footer .width_fix {margin-top:30px; padding:0 15px; overflow:hidden;}
-#wrap.main footer .footer_area {padding:35px 15px;}
+#wrap.main footer .footer_area {padding:25px 15px;}
 .footer_logo {float:left;}
 .footer_logo img {width:70px;}
-.copyright1 {float:left; margin:10px 0 0 20px; font-family:'sans-serif'; font-size:14px;}
-.copyright1 a {color:#999;}
+.copyright {float:left; margin:10px 0 0 20px; font-size:14px;}
+.copyright a {color:#fff;}
 address {margin-top:3px;}
-address a {font-style:normal; color:#444;}
+address a {font-style:normal;}
 
 
 
