--- a/css/default.css
+++ b/css/default.css
@@ -1,3 +1,5 @@
+@charset 'UTF-8';
+
 /************************************************
 	Decrition : 허도경 HEO.D.K
 	Version : 1.0
@@ -8,7 +10,6 @@
 	03. Page Top Button
 ************************************************/
 
-@charset "utf-8";
 /*@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);*/
 
 /**************************
