--- a/scss/common/layout.scss
+++ b/scss/common/layout.scss
@@ -92,8 +92,8 @@ header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg)
 #snb_area.main #snb_main li:first-child {border-top:0;}
 #snb_area.main #snb_main li a {display:block; font-size:17px; background:#444; color:#f1f1f1; overflow:hidden; z-index:10;}
 #snb_area.main #snb_main li a span {display:inline-block; float:left; width:50px; font-size:20px;  background:#222; color:#ddd;}
-#snb {border-top:1px solid #ddd; width:240px;}
-#snb.fix {position:fixed; top:50px;}
+#snb {border-top:1px solid #ddd; width:240px; position:fixed; top:285px;}
+/* #snb.fix {position:fixed; top:285px;} */
 #snb > li {border-bottom:1px solid #ddd;}
 #snb > li > a {display:block; padding-left:15px; font-size:26px; line-height:50px; font-weight:bold; font-family:Arial; color:#444; overflow:hidden;}
 #snb > li > a .arrow {display:block; float:right; margin-right:10px; font-family:"Lucida Handwriting";}
