--- a/scss/common/default.scss
+++ b/scss/common/default.scss
@@ -21,7 +21,7 @@ body, p, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dt, dd, table, thead, tbody, tr
 body {-webkit-text-size-adjust:none}
 table {width:100%; border:0; border-spacing:0; border-collapse:collapse;}
 option {vertical-align:middle; padding:3px 0;}
-img, fieldset, button, frame {vertical-align:middle; border:0;}
+img, fieldset, button, iframe {vertical-align:middle; border:0;}
 ul, ol {list-style:none;}
 em, address {font-style:normal;}
 hr {visibility:hidden;}
