--- a/scss/common/layout.scss
+++ b/scss/common/layout.scss
@@ -15,16 +15,16 @@
     01. HEADER LAYOUT CSS
 ********************************/
 /* header */
-#header_area {height:130px; background:#222;}
-#header_area header {position:relative; height:100%;}
-#header_area header h2 {position:absolute;color:#fff;top: 23px;left: 296px;font-size:64px;font-family:"Lucida Handwriting";}
+#header__area {height:130px; background:#222;}
+#header__area header {position:relative; height:100%;}
+#header__area header h2 {position:absolute;color:#fff;top: 23px;left: 296px;font-size:64px;font-family:"Lucida Handwriting";}
 
-#header_area.wide #logo {top:18px; left:20px;}
-#header_area.wide #logo a {width:95px !important;}
+#header__area.wide #logo {top:18px; left:20px;}
+#header__area.wide #logo a {width:95px !important;}
 
-#header_area.wide #gnb {top:30px; right:30px;}
-#header_area #mobile {display:none; position:absolute; top:48px; right:15px;}
-#header_area .m_menu {position:absolute;}
+#header__area.wide #gnb {top:30px; right:30px;}
+#header__area #mobile {display:none; position:absolute; top:48px; right:15px;}
+#header__area .m_menu {position:absolute;}
 header .btn_menu {display:inline-block; width:35px; height:35px; top:2px; left:0; cursor:pointer;}
 header .btn_menu span {margin:0 auto; position:relative; top:12px;}
 
@@ -44,23 +44,23 @@ header .btn_menu.on span {background-color: rgba(0, 0, 0, 0.0); -webkit-transiti
 header .btn_menu.on span:before {margin-top: 0; -webkit-transform: rotate(45deg) translateX(0px) translateY(16px); transform: rotate(45deg) translateX(0px) translateY(16px); -webkit-transition-delay: 0s, 0.2s; transition-delay: 0s, 0.2s;}
 header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg) translateX(0px) translateY(-16px); transform: rotate(-45deg) translateX(0px) translateY(-16px); -webkit-transition-delay: 0s, 0.2s; transition-delay: 0s, 0.2s;}
 
-#header_area .m_menu {display:none; top:130px; left:0; right:0; z-index:10;}
-#header_area .m_menu.on {display:block;}
-#header_area .m_menu > li {background:#363738; border-top:1px solid #ddd;}
-#header_area .m_menu > li:first-child {border-top:0;}
-#header_area .m_menu > li {display:block; padding:11px 20px; font-size:18px; font-weight:bold; color:#ddd;}
-#header_area .m_menu > li > a {color:#ddd;}
-#header_area .m_menu > li a:hover,
-#header_area .m_menu > li a:focus {color:#f6ee0b;}
-#header_area .m_menu > li.on a {text-decoration:underline;}
+#header__area .m_menu {display:none; top:130px; left:0; right:0; z-index:10;}
+#header__area .m_menu.on {display:block;}
+#header__area .m_menu > li {background:#363738; border-top:1px solid #ddd;}
+#header__area .m_menu > li:first-child {border-top:0;}
+#header__area .m_menu > li {display:block; padding:11px 20px; font-size:18px; font-weight:bold; color:#ddd;}
+#header__area .m_menu > li > a {color:#ddd;}
+#header__area .m_menu > li a:hover,
+#header__area .m_menu > li a:focus {color:#f6ee0b;}
+#header__area .m_menu > li.on a {text-decoration:underline;}
 
-#header_area .m_menu > li > ul {margin-left:10px;}
-#header_area .m_menu > li > ul > li {position:relative;}
-#header_area .m_menu > li > ul > li:before {display:block; content:"-"; width:4px; position:absolute; top:0; left:0;}
-#header_area .m_menu > li > ul > li > a {padding-left:10px; font-size:14px; color:#fff;}
+#header__area .m_menu > li > ul {margin-left:10px;}
+#header__area .m_menu > li > ul > li {position:relative;}
+#header__area .m_menu > li > ul > li:before {display:block; content:"-"; width:4px; position:absolute; top:0; left:0;}
+#header__area .m_menu > li > ul > li > a {padding-left:10px; font-size:14px; color:#fff;}
 
-#logo {position:absolute; top:45px; left:0px; font-weight:bold; font-size:36px; color:#f6ee0b;}
-#logo a {display:block;width: 200px;color:#f4fc27;}
+#logo {position:absolute; top:30px; left:0px; font-weight:bold; font-size:36px; color:#f6ee0b;}
+#logo a {display:block;width: 180px;color:#f4fc27;}
 #logo.txt a {position:relative; padding:32px 5px; font-size:18px; box-shadow:inset 0 0 0 2px #fff; font-family:"notoSansB"; box-sizing:border-box; color:#fff; text-align:center; transition: box-shadow 0.3s;}
 #logo.txt a:before,
 #logo.txt a:after {position: absolute; width:100%; height:100%; top:0; left:0; box-sizing:inherit; transform-origin: center; content: '';}
@@ -70,9 +70,9 @@ header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg)
 #logo.txt a:hover:before,
 #logo.txt a:hover:after {transform: scale3d(1,1,1); transition: transform 0.5s;}
 
-#header_area.on #logo.txt a {box-shadow:none;}
-#header_area.on #logo.txt a:before,
-#header_area.on #logo.txt a:after {display:none;}
+#header__area.on #logo.txt a {box-shadow:none;}
+#header__area.on #logo.txt a:before,
+#header__area.on #logo.txt a:after {display:none;}
 
 #logo a img {width:100%;}
 #logo span {color:#efe70d;}
@@ -92,7 +92,7 @@ header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg)
 #snb_area.main #snb_main li:first-child {border-top:0;}
 #snb_area.main #snb_main li a {display:block; font-size:17px; background:#444; color:#f1f1f1; overflow:hidden; z-index:10;}
 #snb_area.main #snb_main li a span {display:inline-block; float:left; width:50px; font-size:20px;  background:#222; color:#ddd;}
-#snb {border-top:1px solid #ddd; width:240px; position:fixed; top:285px;}
+#snb {border-top:1px solid #ddd; width:240px; position:fixed; top:240px;}
 /* #snb.fix {position:fixed; top:285px;} */
 #snb > li {border-bottom:1px solid #ddd;}
 #snb > li > a {display:block; padding-left:15px; font-size:26px; line-height:50px; font-weight:bold; font-family:Arial; color:#444; overflow:hidden;}
