--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -166,11 +166,11 @@ span.ico.new {color:#b6ff00;}
 
 /* 타이핑 */
 .typing--txt{display: none;}
-.typing ul li.on {display: inline-block; animation-name: cursor; animation-duration: 0.2s; animation-iteration-count: infinite;}
+.typing ul li.on {display: inline-block; animation-name: cursor; animation-duration: 0.15s; animation-iteration-count: infinite;}
 @keyframes cursor {
-     0%{border-right: 1px solid #fff}
-     50%{border-right: 1px solid #000}
-     100%{border-right: 1px solid #fff}
+    0%{border-right: 1px solid #f8f8f8}
+    50%{border-right: 1px solid #222}
+    100%{border-right: 1px solid #f8f8f8}
 }
 /*******************************
     02. MEDIA QUARY CSS
