--- a/scss/style/style.scss
+++ b/scss/style/style.scss
@@ -171,7 +171,8 @@
 
 	#sidebar {display:none;}
 	.width_fix {width:100%;}
-	#content {width:100%; float:none; margin:0;}
+	#content {width:100%; float:none; margin:100px 0 0;}
+    #content .title {margin:0;}
 	.tit_bar {position:relative; top:0; left:0; margin:0 0 20px 0;}
 	.tit_bar .tit {font-size:26px; margin-bottom:5px;}
 	.tit_bar p {font-size:18px; font-family:'Malgun Gothic';}
