--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -15,6 +15,9 @@
 .over {display:none; position:absolute; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0, .4); color:#fff;}
 
 #wrap {overflow:inherit; height:100%;}
+#wrap:after {display:block; height:130px; content:""; position: relative; width: 100%; z-index: -1; bottom: 0;}
+#wrap.main:after {display:none;}
+#wrap.main footer {position:relative; bottom:initial;}
 #wrap.on {overflow:hidden;}
 #wrap.on #header__area {position:relative;}
 #wrap.on.main .port__list--wrap {padding-top:60px;}
