--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -42,6 +42,7 @@
 .search_result .tit {margin:-20px 0 10px 15px;}
 
 .title, .sub_title {text-transform: uppercase; margin: 20px 30px 0; font-size: 42px; border-bottom: 3px solid #222; color:#222; font-family:"NotoSansB";}
+#content .desc_area .title {margin:20px 0 0;}
 .sub_title {position:relative; border-bottom:0; margin:0 0 10px 0; padding-bottom:7px; font-size:24px;}
 .sub_title:after {display:inline-block; position:absolute; left:0; bottom:0; width:35px; border-bottom:2px solid #222; content:"";}
 
