--- a/scss/common/layout.scss
+++ b/scss/common/layout.scss
@@ -1,5 +1,4 @@
 @charset 'UTF-8';
-
 /************************************************
     Decrition : 허도경 HEO.D.K
     Version : 1.0
@@ -15,14 +14,24 @@
     01. HEADER LAYOUT CSS
 ********************************/
 /* header */
-#header__area {height:130px; background:#222;}
+#header__area {position: fixed; height: 130px; background: #222; width: 100%; top: 0; left: 0; right: 0; z-index: 100;}
 #header__area header {position:relative; height:100%;}
-#header__area header h2 {position:absolute;color:#fff;top: 23px;left: 296px;font-size:64px;font-family:"Lucida Handwriting";}
+#header__area header h2 {position:absolute; color:#fff; top:23px; left: 296px; font-size:64px; font-family:"Lucida Handwriting";}
 
-#header__area.wide #logo {top:18px; left:20px;}
+/* Scroll 시 메인 해더 고정 */
+#header__area.on {height:65px; border-bottom:2px solid #fff;}
+#header__area.on #logo {top:-12px;}
+#header__area.on #logo.txt a {border:none;}
+#header__area.on #mobile {top:17px}
+#header__area.on .m_menu {top:65px;}
+#header__area.on #gnb {top:11px;}
+#header__area.on #gnb > li > a {font-size:20px; line-height:22px; font-weight:bold;}
+.main__visual.on {margin-top:65px;}
+
+#header__area.wide #logo {top:18px; left:40px;}
 #header__area.wide #logo a {width:95px !important;}
 
-#header__area.wide #gnb {top:30px; right:30px;}
+#header__area.wide #gnb {top:30px; right:40px;}
 #header__area #mobile {display:none; position:absolute; top:48px; right:15px;}
 #header__area .m_menu {position:absolute;}
 header .btn_menu {display:inline-block; width:35px; height:35px; top:2px; left:0; cursor:pointer;}
@@ -59,8 +68,8 @@ header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg)
 #header__area .m_menu > li > ul > li:before {display:block; content:"-"; width:4px; position:absolute; top:0; left:0;}
 #header__area .m_menu > li > ul > li > a {padding-left:10px; font-size:14px; color:#fff;}
 
-#logo {position:absolute; top:30px; left:0px; font-weight:bold; font-size:36px; color:#f6ee0b;}
-#logo a {display:block;width: 180px;color:#f4fc27;}
+#logo {position:absolute; top:20px; left:16px; font-weight:bold; font-size:36px; color:#f6ee0b;}
+#logo a {display:block; width:95px; color:#f4fc27;}
 #logo.txt a {position:relative; padding:32px 5px; font-size:18px; box-shadow:inset 0 0 0 2px #fff; font-family:"notoSansB"; box-sizing:border-box; color:#fff; text-align:center; transition: box-shadow 0.3s;}
 #logo.txt a:before,
 #logo.txt a:after {position: absolute; width:100%; height:100%; top:0; left:0; box-sizing:inherit; transform-origin: center; content: '';}
@@ -92,7 +101,7 @@ header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg)
 #snb_area.main #snb_main li:first-child {border-top:0;}
 #snb_area.main #snb_main li a {display:block; font-size:17px; background:#444; color:#f1f1f1; overflow:hidden; z-index:10;}
 #snb_area.main #snb_main li a span {display:inline-block; float:left; width:50px; font-size:20px;  background:#222; color:#ddd;}
-#snb {border-top:1px solid #ddd; width:240px; position:fixed; top:240px;}
+#snb {border-top:1px solid #ddd; width:240px; position:fixed; top:217px;}
 /* #snb.fix {position:fixed; top:285px;} */
 #snb > li {border-bottom:1px solid #ddd;}
 #snb > li > a {display:block; padding-left:15px; font-size:26px; line-height:50px; font-weight:bold; font-family:Arial; color:#444; overflow:hidden;}
@@ -121,16 +130,20 @@ header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg)
 #sidebar .bn_area1 {margin-top:20px; height:150px; text-align:center; background-color:#eee;}
 
 #content {float:right; margin-left:30px; width:880px; font-size:18px; line-height:32px;}
-
-#content .title {font-size:32px; font-weight:bold; letter-spacing:-2px;}
+#content .title {font-size:40px; font-weight:bold; letter-spacing:-2px;}
 #content .title.study {padding-left:30px; margin-bottom:80px; font-size:48px; line-height:48px; border-left:5px solid #888; color:#444;}
 #content .desc_area {padding-left:15px; color:#444;}
 #content .desc_area a {/* font-weight:bold; */ text-decoration:underline;}
 #content .desc_area .warning {margin-top:20px; font-size:16px; line-height:26px;}
 #content .desc_area .warning a,
 #content .desc_area .warning span {font-weight:bold; /*border-bottom:2px solid #e74d11;*/ color:#444;}
-#content .description {display:block; margin-top:15px; font-weight:normal; letter-spacing:-1px;}
 
+#content .point__detail--wrap {margin: 30px 0 48px;}
+#content .desc_area .point__detail {font-size:0;}
+#content .desc_area .point__detail li {display:inline-block; width:200px; height:200px; border-radius:50%; text-align:center; font-weight:bold; background-color: rgba(102,102,102,0.4); line-height:200px; font-size: 18px; color: #222; margin-left:-20px;}
+#content .desc_area .point__detail li:first-of-type {margin-left:0;}
+
+#content .description {display:block; margin-top:15px; font-weight:normal; letter-spacing:-1px;}
 #content .description > li {position:relative; font-size:16px; padding-left:9px; line-height:28px; color:#222;}
 #content .description > li em {font-family:"notoSansB";}
 #content .description > li:before {display:inline-block; position:absolute; content:""; width:3px; top:14px; left:0; border-bottom:3px solid #222; border-radius:50%;}
@@ -138,8 +151,8 @@ header .btn_menu.on span:after {margin-top: 0; -webkit-transform: rotate(-45deg)
 #content .description > li > ul > li {position:relative; padding-left:10px; word-break:keep-all;}
 #content .description > li > ul > li:before {display:inline-block; position:absolute; content:""; width:4px; border-bottom:1px solid #222; top:14px; left:0;}
 
-#content .description .progress > span {position:relative; display:inline-block; width:180px; height:30px; border-radius:4px; text-align:center; background:#000;}
-#content .description .progress .bar {position:absolute; top:0; left:0; height:30px; border-radius:4px; background:#0d7cef;}
+#content .description .progress > span {position:relative; display:inline-block; width:180px; height:30px; border-radius:4px; text-align:center; background:#222;}
+#content .description .progress .bar {position:absolute; top:0; left:0; height:30px; border-radius:4px; background:#5f9fff;}
 #content .description .progress span {position:relative; font-size:18px; margin-left:5px; font-weight:bold; color:#fff; vertical-align:middle; line-height:23px}
 #content .description .site_info {display:inline-block; margin-top:10px; padding:3px 15px; font-weight:bold; font-size:20px; letter-spacing:-1px; border-radius:9px 0 9px 9px; background:#000; color:#fff;}
 #content .description .site_info a {display:block; color:#fff;}
